--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "mongodb": "^6.6.2"
+    "mongodb": "^6.6.2",
+    "uuid": "^9.0.1"
   }
 }
